2008-02-29  Jonathon Jongsma  <jjongsma@gnome.org>

	* Makefile.am: add a 'release' target to the makefile.  This target will do
	a distcheck, and if successful it will tag the repository with the current
	release number and upload the tarball to master.gnome.org

2008-02-24  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* docs/reference/Makefile.am:
	* docs/reference/images/Makefile.am:
	* docs/reference/images/widgets/Makefile.am: Added Makefile.am files 
	to dist the contents of these new directories, to fix distcheck.

2008-02-21  Deng Xiyue <manphiz@gmail.com>

	* examples/book/box/main.cc
	* examples/book/custom/custom_widget/mywidget.cc
	* examples/book/drawingarea/arcs/myarea.cc
	* examples/book/drawingarea/clock/clock.cc
	* examples/book/treeview/editable_cells/examplewindow.cc
	* examples/gdk/radar.cc:
	Fix header inclusion and use using directive for C functions to
	fix build on gcc-4.3 and Solaris.  Refined from Tim Mooney's
	patch.
	(Bug #498438, #517530)

2008-02-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* merged documentation fixes from gtkmm-2-12 branch, -r 960:967

2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/reference/images/widgets/notebook1.png:
	* docs/reference/images/widgets/textview1.png:
	* gtk/src/aboutdialog.hg:
	* gtk/src/colorselection.hg:
	* gtk/src/filechooserdialog.hg:
	* gtk/src/fontselection.hg:
	* gtk/src/frame.hg:
	* gtk/src/messagedialog.hg:
	* gtk/src/notebook.hg:
	* gtk/src/recentchooserdialog.hg:
	* gtk/src/scale.hg:
	* gtk/src/scrollbar.hg:
	* gtk/src/separator.hg:
	* gtk/src/table.hg:
	* gtk/src/toggletoolbutton.hg: add a bunch more images to the API reference

2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>

	patch by: Chris Wang <chris.wang@sun.com>

	* demos/gtk-demo/Makefile.am: install resource files for gtkmm demo program
	(also change the name from 'demo' to 'gtkmm-demo').  Fixes Bug #516602

2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>

	patch by: Chris Wang <chris.wang@sun.com>